--- a/client/package.json
+++ b/client/package.json
@@ -12,8 +12,10 @@
     "react": "^16.7.0",
     "react-app-rewired": "^2.1.0",
     "react-dom": "^16.7.0",
+    "react-jsonschema-form": "^1.3.0",
     "react-redux": "^6.0.0",
-    "react-scripts": "^2.1.5",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "^2.1.8",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
     "styled-components": "^4.1.3"
