--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "normalize.css": "^8.0.1",
     "react": "^16.7.0",
     "react-app-rewired": "^2.1.0",
+    "react-csv": "^1.1.1",
     "react-dom": "^16.7.0",
     "react-jsonschema-form": "^1.3.0",
     "react-redux": "^6.0.0",
