Added ability to put in to select 'create-new-schema', which then prompts the user to create their own JSON schema. Also fixed proxy for 'events/updateEvent'. More work needs to be done on refactoring, so this way the event owner can customize the form whenever they want, and not just on creation. Also error handling and validation would also be good to add in the future.

--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,8 @@
     "babel-plugin-import": "^1.11.0",
     "customize-cra": "^0.2.11",
     "http-proxy-middleware": "^0.19.1",
+    "jsoneditor": "^5.32.3",
+    "jsoneditor-react": "^1.0.0",
     "normalize.css": "^8.0.1",
     "react": "^16.7.0",
     "react-app-rewired": "^2.1.0",
