--- a/client/package.json
+++ b/client/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "antd": "^3.13.2",
+    "antd": "^3.16.2",
     "axios": "^0.18.0",
     "babel-plugin-import": "^1.11.0",
     "customize-cra": "^0.2.11",
@@ -11,9 +11,11 @@
     "jsoneditor": "^5.32.3",
     "jsoneditor-react": "^1.0.0",
     "normalize.css": "^8.0.1",
+    "rc-drawer": "^1.7.7",
     "react": "^16.7.0",
     "react-app-rewired": "^2.1.0",
     "react-csv": "^1.1.1",
+    "react-device-detect": "^1.6.2",
     "react-dom": "^16.7.0",
     "react-jsonschema-form": "^1.3.0",
     "react-redux": "^6.0.0",
