--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "react": "^16.7.0",
     "react-app-rewired": "^2.1.0",
     "react-csv": "^1.1.1",
+    "react-data-export": "^0.5.0",
     "react-device-detect": "^1.6.2",
     "react-dom": "^16.7.0",
     "react-jsonschema-form": "^1.3.0",
@@ -23,7 +24,8 @@
     "react-scripts": "^2.1.8",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
-    "styled-components": "^4.1.3"
+    "styled-components": "^4.1.3",
+    "xlsx": "^0.14.2"
   },
   "scripts": {
     "start": "react-app-rewired start",
